--- a/environment.yml
+++ b/environment.yml
@@ -9,6 +9,7 @@ dependencies:
   - rdkit=2021.03.4
   - scikit-learn=0.22.2.post1
   - xgboost=1.0.2
+  - numpy<=1.19.5
   - requests
   - scipy
   - seaborn
@@ -17,5 +18,6 @@ dependencies:
   - tqdm
   - jupyter
   - networkx
+  - lifelines
   - selfies
   - textdistance
